[package]
name = "pleme-testing"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Testing utilities library for Pleme platform - test fixtures, testcontainers, integration helpers"
repository = "https://github.com/pleme-io/pleme-testing"
homepage = "https://github.com/pleme-io/pleme-testing"
readme = "README.md"
keywords = ["testing", "fixtures", "testcontainers", "integration-tests", "rust"]
categories = ["development-tools::testing"]

[dependencies]
rstest = "0.18"
testcontainers = { version = "0.15", optional = true }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio"], optional = true }
redis = { version = "0.24", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots-no-provider"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["serde", "v4"] }
thiserror = "2.0"
anyhow = "1.0"
pleme-database = { version = "0.1", optional = true }
pleme-error = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
containers = ["testcontainers"]
database = ["sqlx", "redis"]
http = ["reqwest"]
integration = ["pleme-database", "pleme-error"]
full = ["containers", "database", "http", "integration"]
